Added travis.yml (#4)